--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,75 @@
 
   <div id="pages">
     <section id="home">
-      
+      <div class="home-links container">
+        <div class="half"><a href="#order"><img src="images/home/pizza-1.jpg" alt="Order">
+            <h1>Order online</h1>
+          </a></div>
+        <div class="half"><a href="#booking"><img src="images/home/pizza-2.jpg" alt="Booking">
+            <h1>Book a table</h1>
+          </a></div>
+        <div class="hours">
+          <h1>Opening hours</h1>
+          <h3>TUE-SUN, 12PM - 12AM</h3>
+        </div>
+      </div>
+      <div class="carousel container">
+        <div class="comment">
+          <div class="comment-image"><img src="images/home/pizza-3.jpg" alt="Comment image"></div>
+          <div class="comment-text">
+            <h2>Amazing service!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam egentas viverra tortor, eu ullamcorper
+              dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
+          </div>
+
+        </div>
+        <div>
+          <span class="dot"></span>
+          <span class="dot active"></span>
+          <span class="dot"></span>
+        </div>
+      </div>
+      <div class="gallery container">
+        <div class="row">
+          <div><img src="images/home/pizza-4.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div><img src="images/home/pizza-5.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div><img src="images/home/pizza-6.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div><img src="images/home/pizza-7.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div><img src="images/home/pizza-8.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div><img src="images/home/pizza-9.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+        </div>
+        <a href="">View more on Instagram</a>
+      </div>
     </section>
 
     <section id="order">
