--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="carousel container">
-        <div class="comment">
+        <div class="carousel-coment">
           <div class="comment-image"><img src="images/home/pizza-3.jpg" alt="Comment image"></div>
           <div class="comment-text">
             <h2>Amazing service!</h2>
