--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,11 @@
       <div class="home-links container">
         <div class="half"><a href="#order"><img src="images/home/pizza-1.jpg" alt="Order">
             <h1>Order online</h1>
+            <h3>Delicious food delivered to your door</h3>
           </a></div>
         <div class="half"><a href="#booking"><img src="images/home/pizza-2.jpg" alt="Booking">
             <h1>Book a table</h1>
+            <h3>Delicious food in our restaurant</h3>
           </a></div>
         <div class="hours">
           <h1>Opening hours</h1>
@@ -84,15 +86,31 @@
           <div class="comment-image"><img src="images/home/pizza-3.jpg" alt="Comment image"></div>
           <div class="comment-text">
             <h2>Amazing service!</h2>
+            <p>Aliquam egentas viverra tortor, eu ullamcorper
+              dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
+          </div>
+
+        </div>
+        <div class="carousel-coment">
+          <div class="comment-image"><img src="images/home/slide-1.jpg" alt="Comment image"></div>
+          <div class="comment-text">
+            <h2>Amazing service!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam egentas viverra tortor, eu ullamcorper
               dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
+          </div>
+        </div>
+        <div class="carousel-coment comment-active">
+          <div class="comment-image"><img src="images/home/slide-2.jpg" alt="Comment image"></div>
+          <div class="comment-text">
+            <h2>Amazing service!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
 
         </div>
         <div>
           <span class="dot"></span>
-          <span class="dot active"></span>
           <span class="dot"></span>
+          <span class="dot active"></span>
         </div>
       </div>
       <div class="gallery container">
